# openshift-okd-data-gatherer

./: .gitignore  LICENSE  README.md  REFACTOR_COMPLETE.md  core_logic.md  plan_cluster_capacity_report_refactor.md  pyproject.toml  requirements.txt  test_java_opts_configmap.py  test_java_opts_patterns.py
config/: README.md  example-config.yaml
data_gatherer/: __init__.py  config.py  run.py
docs/: research.md
rbac/: README.md  data-gatherer-cluster-role-binding.yaml  data-gatherer-cluster-role.yaml  data-gatherer-clusterrole.yaml  data-gatherer-clusterrolebinding.yaml  data-gatherer-role-namespace.yaml  data-gatherer-rolebinding-namespace.yaml  openshift-resource-analyzer-cluster-role-binding.yaml  setup-rbac-cluster.sh  setup-rbac-namespace.sh  setup-rbac.sh
tests/: conftest.py  test_all_reports.py  test_capacity_report.py  test_capacity_report_css.py  test_capacity_report_math.py  test_catalina_opts.py  test_cluster_capacity_excel_comments.py  test_cluster_capacity_report.py  test_cluster_capacity_report_comprehensive.py  test_cluster_capacity_report_excel.py  test_configmap_support.py  test_container_capacity_excel_comments.py  test_container_capacity_report.py  test_container_capacity_report_css.py  test_container_capacity_report_math.py  test_container_capacity_report_new.py  test_containers_config_excel_formatting.py  test_containers_config_integration.py  test_containers_config_report.py  test_db_resurrect.py  test_hash.py  test_java_opts_configmap.py  test_java_opts_patterns.py  test_kube_auth.py  test_logging.py  test_manifest_exporter.py  test_nodes.py  (+18 more)
(+27 files in other folders)
